--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@ plugins {
     id "java"
     id "idea"
     id "maven"
+    id "signing"
 }
 
 group = 'com.tsiyyon'
+archivesBaseName = "auth"
 version = '0.0.1'
 
 ext {
@@ -41,10 +43,56 @@ dependencies {
     testCompile "org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:$jersey"
 }
 
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
 uploadArchives {
     repositories {
         mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
             repository(url: mavenCentral().url)
+            pom.project {
+                name 'auth'
+                packaging 'jar'
+                description 'A application used as an example on how to set up pushing its components to the Central Repository.'
+                url 'http://www.example.com/example-application'
+
+                scm {
+                    connection 'https://github.com/tsiyyon'
+                    developerConnection 'https://github.com/tsiyyon'
+                    url 'https://github.com/tsiyyon'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'sjkyspa'
+                        name 'morpheus'
+                        email 'sjkyspa@gmail.com'
+                    }
+                }
+            }
         }
     }
 }
