--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ uploadArchives {
                 name 'identity'
                 packaging 'jar'
                 description 'The jersey identity module'
+                url 'https://github.com/tsiyyon/identity'
 
                 scm {
                     connection 'scm:git:git://github.com/tsiyyon/identity.git'
