--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,12 @@ archivesBaseName = "identity"
 version = '0.0.1'
 
 ext {
-    hk2_api = '2.4.0-b09'
-    jaxrs = '2.0.1'
+    jaxrs = '2.1'
     junit = '4.12'
-    guice = '3.0'
-    jersey = '2.17'
-    mockito = '1.9.5'
+    guice = '4.1.0'
+    jersey = '2.26'
+    mockito = '1.10.19'
     hamcrest = '1.3'
-    guava = '18.0'
-    mybatis_guice = '3.7'
-    guice_bridge = '2.4.0-b09'
 }
 
 repositories {
@@ -34,6 +30,8 @@ dependencies {
     compile "javax.ws.rs:javax.ws.rs-api:$jaxrs"
     compile "com.google.inject:guice:$guice"
     compile "org.glassfish.jersey.core:jersey-server:$jersey"
+    compile "org.glassfish.jersey.core:jersey-common:$jersey"
+    compile "org.glassfish.jersey.inject:jersey-hk2:$jersey"
 
     testCompile "junit:junit:$junit"
     testCompile "org.hamcrest:hamcrest-all:$hamcrest"
